--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,13 @@
+.headerContainer{
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    margin-bottom: 0px;
+}
+
+.logos{
+
+}
 
 @media (min-width:2000px) {
     .ajo {
@@ -226,9 +236,6 @@
 
     .headerContainer {
         background-size: 30%;
-        max-width: 100vh;
-        max-height: 100vh;
-        overflow: hidden;
         margin-top: 0%;
         background-position: left top, right top;
         background-position: top right;
